--- a/css.css
+++ b/css.css
@@ -21,3 +21,23 @@ body{
 .white{
     color:'white'
 }
+.btnwhite{
+    background-color: white;
+    border:1px #42a7f5 solid; 
+    border-radius: 33px;
+    color:#42a7f5;
+    height:50px;
+}
+.btnblue{
+    background-color: #42a7f5;
+    border:1px white solid; 
+    border-radius: 33px;
+    color:white;
+    height:50px;
+}
+.btnblue:hover{
+    background-color: #3f90ce;
+}
+.btnwhite:hover{
+    background-color: #8fc7f16c;
+}
