--- a/twitter/src/Components/Home/Home.css
+++ b/twitter/src/Components/Home/Home.css
@@ -57,11 +57,14 @@ body,html{
 }
 
 .container .right .card h1{
-   font-size: 40px;
+   font-size: 30px;
    line-height: 50px;
    color: black;
    margin-right: 150px;
 }
+.container .right .card h4{
+    margin-left: 8px;
+ }
 .container .right .card p{
     font-size: 18px;
     line-height: 32px;
@@ -131,5 +134,5 @@ button.btn1:hover{
     text-decoration:underline;
 }
 .bottom{
-    margin-top: 12px;
+    margin-top: 30px;
 }
