--- a/twitter/src/Components/Feed/Post.css
+++ b/twitter/src/Components/Feed/Post.css
@@ -6,12 +6,14 @@
   }
   
   .post__body {
-    flex: 1;
+    /* flex: 5; */
     padding: 10px;
   }
   
   .post__body > img {
     border-radius: 20px;
+    width: 800px;
+    height: 300px;
   }
   
   .post__footer {
