--- a/twitter/src/Components/HomePage/Homepage.css
+++ b/twitter/src/Components/HomePage/Homepage.css
@@ -1,6 +1,6 @@
 .homepage {
     display: flex;
-    max-width: 1300px;
+    /* max-width: 1300px; */
     margin-left: auto;
     margin-right: auto;
 }
