--- a/twitter/src/Components/Sidebar/Sidebar.css
+++ b/twitter/src/Components/Sidebar/Sidebar.css
@@ -1,10 +1,11 @@
 .sidebar {
     border-right: 1px solid var(--twitter-background);
     flex: 0.3;
-    /* min-width: 250px; */
+    max-width: 250px;
     margin-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
+    position: sticky;
   }
   
   .sidebar__twitterIcon {
