--- a/twitter/src/Components/Sidebar/Sidebar.css
+++ b/twitter/src/Components/Sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-    border-right: 1px solid var(--twitter-background);
+    border-right: 1px solid #e6ecf0;;
     flex: 0.3;
     max-width: 250px;
     margin-top: 20px;
@@ -9,14 +9,14 @@
   }
   
   .sidebar__twitterIcon {
-    color: var(--twitter-color);
+    color: #50b7f5;
     font-size: 30px !important;
     margin-left: 20px;
     margin-bottom: 20px;
   }
   
   .sidebar__tweet {
-    background-color: var(--twitter-color) !important;
+    background-color:  #50b7f5 !important;
     border: none !important;
     color: white !important;
     font-weight: 900 !important;
