--- a/twitter/src/Components/Feed/Post.css
+++ b/twitter/src/Components/Feed/Post.css
@@ -1,7 +1,7 @@
 .post {
     display: flex;
     align-items: flex-start;
-    border-bottom: 1px solid var(--twitter-background);
+    border-bottom: 1px solid#e6ecf0;;
     padding-bottom: 10px;
   }
   
@@ -34,7 +34,7 @@
   
   .post__badge {
     font-size: 14px !important;
-    color: var(--twitter-color);
+    color:  #50b7f5;
   }
   
   .post__headerSpecial {
