--- a/twitter/src/Components/Widgets/Widgets.css
+++ b/twitter/src/Components/Widgets/Widgets.css
@@ -5,7 +5,7 @@
 .widgets__input {
   display: flex;
   align-items: center;
-  background-color: var(--twitter-background);
+  background-color:#e6ecf0;;
   padding: 10px;
   border-radius: 20px;
   margin-top: 10px;
@@ -14,7 +14,7 @@
 
 .widgets__input > input {
   border: none;
-  background-color: var(--twitter-background);
+  background-color: #e6ecf0;;
 }
 
 .widgets__searchIcon {
