--- a/twitter/src/Components/Home/Home.css
+++ b/twitter/src/Components/Home/Home.css
@@ -4,17 +4,15 @@
 body,html{
     margin: 0;
     padding: 0;
- 
+    background-image: url("https://i.imgur.com/kEi7iVt.png");
+    background-repeat: no-repeat; 
 }
 
 .container{
+    height: 100vh;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 85vh 15vh ;
-     background-image: url("https://i.imgur.com/kEi7iVt.png");
-     background-repeat: no-repeat;
-    
-
 }
 
 .container .left{
@@ -55,18 +53,14 @@ body,html{
  display: flex;
  justify-content: space-between;
  margin-left: -20px;
- /* margin-bottom: 100px; */
 }
 
 .container .right .card h1{
-   font-size: 30px;
-   line-height: 50px;
+   font-size: 27px;
+   line-height: 32px;
    color: black;
    margin-right: 150px;
 }
-.container .right .card h4{
-    margin-left: 8px;
- }
 .container .right .card p{
     font-size: 18px;
     line-height: 32px;
@@ -77,7 +71,7 @@ body,html{
    
 button.btn{
     display: block;
-    font-size: 17px;
+    font-size: 14px;
     line-height: 20px;
     border-radius: 100px;
     font-weight: bold;
@@ -87,7 +81,7 @@ button.btn{
     height: 50px;
     border: none;
     outline: none;
-    margin-bottom: 0.8rem;
+    margin-bottom: 0.3rem;
 }
 button.btn:hover{
     background-color:#2596be;
@@ -95,7 +89,7 @@ button.btn:hover{
 }
 button.btn1{
     display: block;
-    font-size: 17px;
+    font-size: 14px;
     line-height: 20px;
     border-radius: 100px;
     font-weight: bold;
@@ -136,5 +130,5 @@ button.btn1:hover{
     text-decoration:underline;
 }
 .bottom{
-    margin-top: 30px;
+    margin-top: 12px;
 }
