--- a/twitter/src/Components/Home/Home.css
+++ b/twitter/src/Components/Home/Home.css
@@ -4,8 +4,7 @@
 body,html{
     margin: 0;
     padding: 0;
-    background-image: url("https://i.imgur.com/kEi7iVt.png");
-    background-repeat: no-repeat; 
+ ; 
 }
 
 .container{
@@ -13,6 +12,8 @@ body,html{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 85vh 15vh ;
+    background-image: url("https://i.imgur.com/kEi7iVt.png");
+    background-repeat: no-repeat; 
 }
 
 .container .left{
