--- a/twitter/src/Components/Feed/Post.css
+++ b/twitter/src/Components/Feed/Post.css
@@ -7,7 +7,8 @@
   
   .post__body {
     /* flex: 5; */
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
   
   .post__body > img {
