--- a/twitter/src/Components/Feed/Feed.css
+++ b/twitter/src/Components/Feed/Feed.css
@@ -1,8 +1,8 @@
 .feed {
-    flex: 0.6;
+    flex: 0.1;
     border-right: 1px solid #e6ecf0;;
     /* min-width: fit-content; */
-    overflow-y: scroll;
+    overflow-y:visible;
   }
   /* to hide the sidebar  for chorme and safari*/
   .feed::-webkit-scrollbar {
