--- a/twitter/src/Components/Feed/Post.css
+++ b/twitter/src/Components/Feed/Post.css
@@ -6,14 +6,14 @@
   }
   
   .post__body {
-    /* flex: 5; */
-    padding-left: 10px;
-    padding-right: 10px;
+    flex: 5;
+    /* padding-left: 10px;
+    padding-right: 10px; */
   }
   
   .post__body > img {
     border-radius: 20px;
-    width: 800px;
+    width: 600px;
     height: 300px;
   }
   
