--- a/twitter/src/Components/Sidebar/Sidebar.css
+++ b/twitter/src/Components/Sidebar/Sidebar.css
@@ -1,10 +1,12 @@
 .sidebar {
-  border-right: 1px solid var(--twitter-background);
-  flex: 0.1;
+  position: sticky  !important;
+  border-right: 1px white;
+  flex: 0.4;
   /* min-width: 250px; */
   margin-top: 20px;
   padding-left: 20px;
   padding-right: 20px;
+  
 }
 
 .sidebar__twitterIcon {
@@ -23,4 +25,9 @@
   border-radius: 30px !important;
   height: 50px !important;
   margin-top: 20px !important;
+}
+
+.link{
+  color:black;
+  font-style: none;
 }
