--- a/twitter/src/Components/Feed/Feed.css
+++ b/twitter/src/Components/Feed/Feed.css
@@ -2,7 +2,7 @@
     flex: 0.9;
     border-right: 1px solid #e6ecf0;;
     /* min-width: fit-content; */
-    overflow-y: scroll;
+    overflow-y: visible;
   }
   /* to hide the sidebar  for chorme and safari*/
   .feed::-webkit-scrollbar {
