--- a/twitter/src/Components/Sidebar/Sidebar.css
+++ b/twitter/src/Components/Sidebar/Sidebar.css
@@ -4,8 +4,9 @@
   flex: 0.4;
   /* min-width: 250px; */
   margin-top: 20px;
-  padding-left: 20px;
+  padding-left: 10px;
   padding-right: 20px;
+  margin-left: 50px;
   
 }
 
@@ -25,9 +26,23 @@
   border-radius: 30px !important;
   height: 50px !important;
   margin-top: 20px !important;
+  width: 200px;
+  margin-left: 300px;
+
 }
 
 .link{
   color:black;
   font-style: none;
+  text-decoration: none;
+}
+.link text{
+  
+  font-style: none;
+  text-decoration: none;
+}
+.link:hover{
+  color:#50b7f5;
+  font-style: none;
+ 
 }
