--- a/twitter/src/Components/Profile/Profile.css
+++ b/twitter/src/Components/Profile/Profile.css
@@ -4,7 +4,7 @@
     width: 700px;
     /* width: 70%; */
     overflow-y:visible;
-    
+    min-width: 50vw;
   }
 
   /* 
@@ -31,7 +31,7 @@
     background-color: white;
     z-index: 90;
     border: 1px solid #e6ecf0;;
-    padding: 15px 20px;
+    padding: 1px 20px;
   }
 
   .profile__header > h2 {
@@ -51,7 +51,7 @@
   }
 
   .username {
-margin-top: -40px;
+margin-top: 10px;
 color : rgb(181,190,199)
 }
 
@@ -150,3 +150,11 @@ color : rgb(181,190,199)
     /* width:50px;
     height:50px; */
   }
+
+  .edit {
+    display: flex;
+    /* max-width: 1300px; */
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 50vw;
+}
